<resources>
    <string name="app_name">FoodPlanner</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imgDescription">BackGround Picture</string>
    <string name="Signup">Sign up with email</string>
    <string name="Google">Continue with google</string>
    <string name="Facebook">Continue with facebook</string>
    <string name="Guest">Continue as a guest</string>
    <string name="Account">Already have account?login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="signupAccount">Don\'t have account?sign up</string>
    <string name="Name">Name</string>
    <string name="Confirm">Confirm Password</string>
    <string name="Sign">Sign up</string>
    <string name="LoginAccount">Already have account?Login</string>
    <string name="Maximus">Maximus Gold</string>
    <string name="LogOUT">Log out</string>
    <string name="email">Email</string>
    <string name="name">Edit your name</string>
    <string name="password2">Change password</string>
    <string name="backUp">Back up</string>
    <string name="backup">Backup</string>
    <string name="chicken">Chicken</string>
    <string name="userEmail">email</string>
    <string name="historySearch">historySearch</string>
    <string name="resultSearch">resultSearch</string>
    <string name="typeOfSearch">typeOfSearch</string>
    <string name="searchByName">searchByName</string>
    <string name="searchByIngredient">searchByIngredient</string>
    <string name="searchByCountry">searchByCountry</string>
    <string name="searchByCuisines">searchByCuisines</string>
    <string name="facebook_app_id">502473452053822</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">c099d0593df0a65659598c4775fa4a0b</string>
    <string name="mealID">mealID</string>
    <string name="isLocal">isLocal</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="MealOfDay" translatable="false">mealofday</string>
    <string name="arrayImageMealOfDay">arrayImageMealOfDay</string>
    <string name="isFav">isFav</string>
</resources>