<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.foodplanner.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.foodplanner.serach.SearchFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_plan"
        android:name="com.example.foodplanner.plan.PlanFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_plan" >
        <action
            android:id="@+id/action_navigation_plan_to_navigation_search"
            app:destination="@id/navigation_search"
            app:popUpTo="@id/navigation_plan"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.foodplanner.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.foodplanner.favorite.FavoriteFragment"
        android:label="fragment_favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>